--- a/package.json
+++ b/package.json
@@ -6,12 +6,24 @@
   "author": "Tyler Bell <belltyler@live.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongo": "^0.1.0"
+    "mongodb": "^4.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/mongodb": "^3.6.17",
-    "@types/node": "^15.6.1"
+    "@types/node": "^15.14.4",
+    "@types/body-parser": "^1.19.1",
+    "dotenv": "^10.0.0",
+    "nodemon": "^2.0.12",
+    "ts-node": "^10.1.0",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.5"
+  },
+  "scripts": {
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
+    "clean": "rm -rf node_modules package-lock.json yarn.lock && yarn"
   }
 }
